--- a/graph-node-configs/config.tmpl
+++ b/graph-node-configs/config.tmpl
@@ -1,19 +1,28 @@
 [store]
 [store.primary]
-connection = "postgresql://${DB_USER}:${DB_PASS}@${DB_HOST}:5432/${GRAPH_NODE_DB_NAME}?host=/var/run/postgresql"
+connection = "postgresql://${DB_USER}:${DB_PASS}@${DB_HOST}:5432/${GRAPH_NODE_DB_NAME}"
 pool_size = 10
 
 
 [chains]
 ingestor = "index_node_0"
 
-[chains.${CHAIN_0_NAME}]
+[chains.mainnet]
 shard = "primary"
-provider = [ { label = "${CHAIN_0_NAME}", url = "${CHAIN_0_RPC}", features = ${CHAIN_0_FEATURES} } ]
+provider = [ { label = "mainnet", url = "http://rpc:8545/1", features = ["archive","traces"] } ]
 
-[chains.${CHAIN_1_NAME}]
+[chains.goerli]
 shard = "primary"
-provider = [ { label = "${CHAIN_1_NAME}", url = "${CHAIN_1_RPC}", features = ${CHAIN_1_FEATURES} } ]
+provider = [ { label = "goerli", url = "http://rpc:8545/5", features = ["archive","traces"] } ]
+
+[chains.gnosis]
+shard = "primary"
+provider = [ { label = "gnosis", url = "http://rpc:8545/100", features = ["archive","traces"] } ]
+
+[chains.matic]
+shard = "primary"
+provider = [ { label = "matic", url = "http://rpc:8545/137", features = ["archive","traces"] } ]
+
 
 [deployment]
 [[deployment.rule]]
